--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,13 +8,17 @@
     <Grid Background="#FF232323" Height="745">
         <Label Content="Crystal Simulator" x:Name="label1" Margin="111,45,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="283" Height="45" VerticalAlignment="Top" Background="#00000000"/>
         <Grid HorizontalAlignment="Left" Height="100" Margin="74,124,0,0" VerticalAlignment="Top" Width="320">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="97*"/>
+                <ColumnDefinition Width="63*"/>
+            </Grid.ColumnDefinitions>
             <TextBox Margin="112,35,0,0" x:Name="textBox1" TextAlignment="Center" BorderBrush="White" TabIndex="0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="36" Background="#00000000" Foreground="White" FontFamily="Consolas" />
-            <Button Content="Load grid" Margin="176,16,0,0" x:Name="button1" Click="button1_Click" FontFamily="Consolas" Cursor="Arrow" Foreground="White" BorderBrush="White" Background="#00DDDDDD" TabIndex="2" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="126" FontWeight="Bold" />
+            <Button Content="Load grid" Margin="176,16,0,0" x:Name="button1" Click="button1_Click" FontFamily="Consolas" Cursor="Arrow" Foreground="White" BorderBrush="White" Background="#00DDDDDD" TabIndex="2" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="126" FontWeight="Bold" Grid.ColumnSpan="2" />
             <Label Content="Radius" Height="28" HorizontalAlignment="Left" Margin="52,33,0,0" x:Name="label2" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold" />
-            <Button Content="Load simulation" FontFamily="Consolas" Height="27" HorizontalAlignment="Left" Margin="176,50,0,0" x:Name="loadSimualtion" VerticalAlignment="Top" Width="126" Click="loadSimualtion_Click" Background="#00DDDDDD" BorderBrush="White" TabIndex="3" Foreground="White" FontWeight="Bold" />
-            <Label Visibility="hidden" Content="Wrong inputs!" FontFamily="Consolas" Margin="58,-9,0,0" x:Name="label5" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="96" />
+            <Button Content="Load simulation" FontFamily="Consolas" Height="27" HorizontalAlignment="Left" Margin="176,50,0,0" x:Name="loadSimualtion" VerticalAlignment="Top" Width="126" Click="loadSimualtion_Click" Background="#00DDDDDD" BorderBrush="White" TabIndex="3" Foreground="White" FontWeight="Bold" Grid.ColumnSpan="2" />
+            <Label Content="WRONG INPUTS" FontFamily="Consolas" Margin="52,-16,41,91" x:Name="label5" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Center" HorizontalAlignment="Center" Width="227" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" />
         </Grid>
-        <Grid Name="SimControls" HorizontalAlignment="Left" Height="191" Margin="21,471,0,0" VerticalAlignment="Top" Width="507" Visibility="hidden">
+        <Grid Name="SimControls" HorizontalAlignment="Left" Height="191" Margin="21,471,0,0" VerticalAlignment="Top" Width="507">
             <Slider Height="23" HorizontalAlignment="Left" Margin="196,11,0,0" x:Name="speedSlider" VerticalAlignment="Top" Width="140" ValueChanged="speedSlider_ValueChanged" Foreground="Red" Background="#00000000" BorderBrush="Red" TabIndex="6" />
             <Button Content="Restart" Height="27" HorizontalAlignment="Left" Margin="193,99,0,-26" x:Name="restart" VerticalAlignment="Top" Width="126" FontFamily="Consolas" DataContext="{Binding}" Click="restart_Click" BorderBrush="White" TabIndex="10" Foreground="White" Background="#00000000" FontWeight="Bold" />
             <Button Content="Start" Height="27" HorizontalAlignment="Left" Margin="193,56,0,0" x:Name="buttonStart" VerticalAlignment="Top" Width="126" Click="buttonStart_Click" FontFamily="Consolas" BorderBrush="Red" TabIndex="8" Foreground="Red" Background="#00000000" FontWeight="Bold" />
@@ -23,7 +27,7 @@
             <Label Content="Speed" FontFamily="Consolas" Height="28" HorizontalAlignment="Left" Margin="133,6,0,0" x:Name="speedLabel" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" />
             <Button Content="Save simulation" FontFamily="Consolas" Height="27" HorizontalAlignment="Left" Margin="193,144,0,-71" x:Name="saveSimulation" VerticalAlignment="Top" Width="126" Click="saveSimulation_Click" BorderBrush="White" TabIndex="11" Background="#00000000" Foreground="White" FontWeight="Bold" />
         </Grid>
-        <Grid Name="Settings" HorizontalAlignment="Left" Height="260" Margin="21,224,0,0" VerticalAlignment="Top" Width="477" Visibility="hidden">
+        <Grid Name="Settings" HorizontalAlignment="Left" Height="260" Margin="21,224,0,0" VerticalAlignment="Top" Width="477">
             <TabControl TabStripPlacement="Top" Name="TabControl" HorizontalAlignment="Left" Height="156" Margin="90,9,0,0" VerticalAlignment="Top" Width="267">
                 <TabItem Header="Standard one">
                     <Grid Background="Transparent">
@@ -69,11 +73,11 @@
             <ComboBox Height="23" HorizontalAlignment="Left" Margin="132,221,0,0" x:Name="comboBox2" VerticalAlignment="Top" Width="226" SelectionChanged="comboBox2_SelectionChanged" FontFamily="Consolas" BorderBrush="Black" TabIndex="5" Foreground="Black" Background="White" />
             <Image Height="23" HorizontalAlignment="Left" Margin="372,219,0,0" x:Name="image2" Source="/GameOfLife;component/Images/Info.png" Stretch="Fill" Width="23" MouseLeftButtonDown="image2_Click" VerticalAlignment="Top"/>
             <Button Name="Loadparameters" Content="Load parameters" HorizontalAlignment="Left" Margin="90,180,0,0" VerticalAlignment="Top" Width="118" Height="27" FontFamily="Consolas" Background="#00000000" BorderBrush="White" Foreground="White" FontWeight="Bold" Click="LoadParameters"/>
-            <Label Visibility="hidden" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="Wrong inputs!" FontFamily="Consolas" Margin="208,180,0,0" x:Name="Wrongparameters" Foreground="Red" FontWeight="Bold" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="140" />
-            <Label Visibility="hidden" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Consolas" Margin="208,180,0,0" x:Name="Correctparameters" Foreground="Green" FontWeight="Bold" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="149" />
+            <Label VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="WRONG INPUTS" FontFamily="Consolas" Margin="208,180,0,0" x:Name="Wrongparameters" Foreground="Red" FontWeight="Bold" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="140" />
+            <Label VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Consolas" Margin="208,180,0,0" x:Name="Correctparameters" Foreground="Green" FontWeight="Bold" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="149" />
             <Label Name="Parameters" Content="Parameters" HorizontalAlignment="Left" Margin="86,-19,0,0" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold"/>
         </Grid>
-        <Grid Visibility="hidden" Name="GridandGraphs" Margin="528,45,76,121">
+        <Grid Name="GridandGraphs" Margin="528,45,76,121">
             <Grid.RowDefinitions>
                 <RowDefinition/>
             </Grid.RowDefinitions>
@@ -114,7 +118,7 @@
             <Canvas Height="300" HorizontalAlignment="Left" Margin="390,24,0,0" x:Name="canvas2" VerticalAlignment="Top" Width="300" Background="#00000000"/>
             <Label Content="Phase" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="300"/>
             <Label Content="Temperature" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="390,0,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="300"/>
-            <Grid Name="Cellstatus" Visibility="hidden">
+            <Grid Name="Cellstatus">
                 <Label Name="Cellphase" Content="Cell Phase:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="0,326,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="82"/>
                 <Label Name="Celltemperature" Content="Cell Temperature:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="390,325,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="120"/>
                 <Label Name="CellPhase" HorizontalContentAlignment="left" HorizontalAlignment="Left" Margin="84,326,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Consolas" FontWeight="Bold" Height="24" Width="105"/>
